trying out a potential fix for image uploading on ios

--- a/client/src/components/add_pet/add_pet.css
+++ b/client/src/components/add_pet/add_pet.css
@@ -1,3 +1,15 @@
+input[type="file"] {
+    display: block !important;
+    width: 100% !important;
+    height: 100% !important;
+    opacity: 0 !important;
+    overflow: hidden !important;
+    z-index: 100 !important;
+    margin-top: -20px;
+    padding-top: -20px;
+    top: -20px;
+}
+
 input {
     height: 20%;
 }
